refactor: use mongoDB in the backend. Currently runs on sperate docker container. TODO: change form to work with multiple file uploads